<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/profile_text"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="20dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/profile_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible" />

        <TextView
            android:id="@+id/profileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_initial"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/profileImage"
            app:layout_constraintTop_toTopOf="@+id/profileImage"
            app:layout_constraintBottom_toBottomOf="@+id/profileImage"
            app:layout_constraintEnd_toEndOf="@+id/profileImage"
            />

    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/name_event"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:drawableStart="@drawable/username"
        android:text="@string/profile_username"
        android:background="@drawable/edit_text_border"
        app:layout_constraintTop_toBottomOf="@id/username_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@id/name_event"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/start_date"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:textSize="12sp"
        android:text="@string/profile_email"
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/email"
        app:layout_constraintTop_toBottomOf="@id/email_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/phone_number"
        app:layout_constraintTop_toBottomOf="@id/start_date"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/profile_number"
        android:textSize="12sp"
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/number"
        app:layout_constraintTop_toBottomOf="@id/phone_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/role_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role_text"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/role_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/role_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/facility_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facility_name"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/role_spinner"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/facility_name"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/profile_facility"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/facility_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edit_text_border"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_profile_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        app:layout_constraintTop_toBottomOf="@id/facility_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/primaryPurpleColor"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>