<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".CreateProfile">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/create_profile"
        android:textColor="@color/primaryPinkColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/create_profile_descr"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_text" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/username"
        android:drawablePadding="8dp"
        android:hint="@string/ex_john_smith"
        android:inputType="none"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_label" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="none"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/email"
        android:drawablePadding="8dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_label" />

    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="none"
        android:text="@string/phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/number"
        android:drawablePadding="8dp"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_label" />

    <TextView
        android:id="@+id/role_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/role"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone" />

    <RelativeLayout
        android:id="@+id/spinner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/role_label">

        <Spinner
            android:id="@+id/role_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_border"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/select_role"
            app:srcCompat="@android:drawable/arrow_down_float"
            app:tint="@color/primaryPinkColor" />

    </RelativeLayout>

    <!-- Facility TextView only accessible to organizer -->
    <TextView
        android:id="@+id/facility_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/facility_name"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_layout" />

    <!-- Facility EditText only accessible to organizer -->
    <EditText
        android:id="@+id/facility_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/max_attendees"
        android:drawablePadding="8dp"
        android:hint="@string/facility_hint"
        android:inputType="none"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facility_label" />

    <Button
        android:id="@+id/qrScannerButton"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/admin_button"
        android:stateListAnimator="@null"
        android:text="@string/qrscanner"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_button"
        android:textColor="@color/white"
        app:backgroundTint="@color/primaryPurpleColor"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facility_name" />

</androidx.constraintlayout.widget.ConstraintLayout>