<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/go_back"
            android:padding="10dp"
            android:src="@drawable/ic_back"
            android:layout_gravity="start"
            android:layout_marginTop="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/edit_event"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:layout_marginEnd="40dp"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/event_image"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:contentDescription="@string/event_poster"
            android:src="@color/secondaryGreyColor" />

        <ImageButton
            android:id="@+id/change_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/edit_event_poster"
            android:src="@drawable/camera"
            android:background="?android:attr/selectableItemBackgroundBorderless" />

    </FrameLayout>

    <EditText
        android:id="@+id/name_event"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:text="@string/current_title"
        android:background="@drawable/edit_text_border"
        android:inputType="text"
        android:textSize="12sp"
        android:drawableStart="@drawable/event_name"
        android:drawablePadding="8dp"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:id="@+id/start_date"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:text="@string/current_start"
        android:background="@drawable/edit_text_border"
        android:inputType="date"
        android:textSize="12sp"
        android:drawableStart="@drawable/calendar"
        android:drawablePadding="8dp"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:id="@+id/end_date"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:text="@string/current_end"
        android:background="@drawable/edit_text_border"
        android:inputType="date"
        android:textSize="12sp"
        android:drawableStart="@drawable/clock"
        android:drawablePadding="8dp"
        android:layout_marginBottom="15dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_border"
        android:paddingHorizontal="16dp">

        <EditText
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:autofillHints=""
            android:inputType="text"
            android:text="@string/current_description"
            android:textSize="12sp"
            android:drawableStart="@drawable/description"
            android:drawablePadding="8dp"
            android:background="@android:color/transparent" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/max_entrants"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:inputType="text"
            android:text="@string/current_max"
            android:background="@drawable/edit_text_border"
            android:textSize="12sp"
            android:drawableStart="@drawable/max_attendees"
            android:drawablePadding="8dp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/location_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/geolocation"
            android:textSize="12sp"
            android:layout_marginEnd="20dp"
            app:trackTint="@color/primaryPinkColor"
            android:layout_marginStart="16dp"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_event_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primaryPurpleColor"
        android:textColor="@color/white"
        app:cornerRadius="10dp"/>

</LinearLayout>